1156299, CVE-2014-7811 - Fixed reported XSS issues  * /rhn/systems/details/Overview.do?sid= , Description  * /rhn/groups/GroupDetail.do?sgid= , Name, Description  * /rhn/users/UserList.do, /rhn/users/DisabledList.do - first/last name  * /rhn/systems/details/history/Event.do?sid= , SCAP param/action

--- a/java/code/webapp/WEB-INF/pages/common/fragments/user/userlist_columns.jspf
+++ b/java/code/webapp/WEB-INF/pages/common/fragments/user/userlist_columns.jspf
@@ -4,9 +4,7 @@
         sortable="true"
         headerkey="realname.displayname"
         sortattr="userLastName">
-
-        <c:out value="${current.userLastName}, ${current.userFirstName}" escapeXml="false" />
-
+        <c:out value="${current.userLastName}, ${current.userFirstName}" />
 </rl:column>
 
 <rl:column bound="true"
