1320444 - Bad bean-message ids and navbar-vars can lead to XSS issues
Fixed generally in LocalizationService and DialognavRenderer, removed
some attempts at fixing specific locations.

--- a/java/code/webapp/WEB-INF/pages/common/fragments/kickstart/advanced/details.jspf
+++ b/java/code/webapp/WEB-INF/pages/common/fragments/kickstart/advanced/details.jspf
@@ -11,8 +11,8 @@
                    action="${param.url}?csrf_token=${csrfToken}"
                    enctype="multipart/form-data">
             <rhn:csrf />
-            <h2><bean:message key="${fn:escapeXml(param.title_key)}"/></h2>
-            <p><bean:message key="${fn:escapeXml(param.summary_key)}"/></p>
+            <h2><bean:message key="${param.title_key)}"/></h2>
+            <p><bean:message key="${param.summary_key}"/></p>
             <div class="form-group">
                 <label class="col-lg-3 control-label">
                     <rhn:required-field key="kickstart.jsp.create.wizard.kickstart.profile.label"/>:
